@startuml users_auth
title Schéma Base de Données - Utilisateurs & Authentification

entity "users" as users {
  *id : bigint
  *username : string (unique)
  name : string (nullable)
  *email : string (unique)
  email_verified_at : timestamp
  *password : string
  role : enum(Admin,User)
  newsletter_subscribed : boolean
  newsletter_subscribed_at : timestamp
  --Adresses--
  address : string
  city : string
  postal_code : string
  country : string
  phone : string
  --Système--
  remember_token : string
  deleted_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "password_reset_tokens" as prt {
  *email : string
  token : string
  created_at : timestamp
}

entity "messages" as messages {
  *id : bigint
  *user_id : bigint
  *name : string
  *email : string
  *subject : string
  *content : text
  status : enum(unread,read,replied)
  admin_reply : text
  replied_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

users ||..|| prt : email
users ||--o{ messages : user_id
@enduml
